<resources>
    <string name="app_name">JRSqlite</string>
    <string name="search_for_department">Search for department</string>
    <string name="search">Search</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="view_courses">View Courses</string>
    <string name="delete">Delete</string>
    <string name="new_department">New Department</string>
    <string name="enter_department_name">Enter Department Name</string>
    <string name="save">Save</string>
    <string name="enter_capacity">Enter Capacity</string>
    <string name="move_course">Move</string>
    <string name="move_to_department">Move to department:</string>
</resources>
