<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jrsqlite.CourseListActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/department_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/department_filter_edit_text"
        android:layout_marginTop="96dp" />

    <ImageButton
        android:id="@+id/add_new_department_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"

        android:src="@android:drawable/ic_input_add" />

    <EditText
        android:id="@+id/department_filter_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/search_for_department"
        android:inputType="textPersonName"
        android:textColorLink="?attr/actionModeSplitBackground" />

    <Button
        android:id="@+id/department_search_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/department_filter_edit_text"
        android:background="@color/colorPrimary"
        android:text="@string/search"
        android:textColorLink="?attr/actionModeSplitBackground" />

    <TextView
        android:id="@+id/clear_department_filter_text_view"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/dialogPreferredPadding"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/department_search_button"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="23dp"
        android:text="@string/clear_filter"
        tools:layout_height="30dp"
        tools:text="Clear Filter" />

</RelativeLayout>
