<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jrsqlite.CourseDetailsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/course_table"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/title_row"
            android:minHeight="40dp"
            android:paddingBottom="16dp">

            <TextView
                android:textSize="40sp"
                android:text="Course Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_text_view"
                tools:text="Course Info" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/name_row"
            android:orientation="horizontal"
            android:minHeight="40dp">


            <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_text_view" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/instructor_row"
            android:orientation="horizontal"
            android:minHeight="40dp">

            <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/instructor_text_view" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/capacity_row"
            android:orientation="horizontal"
            android:minHeight="40dp">

            <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/capacity_text_view" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/number_row"
            android:orientation="horizontal"
            android:minHeight="40dp">

            <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/number_text_view" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button_row"
            android:orientation="horizontal"
            android:minHeight="40dp"
            android:paddingTop="16dp"
            android:paddingBottom="20dp">

            <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_course_button"
                android:background="@android:color/holo_orange_light" />

        </TableRow>

        <TableRow
            android:id="@+id/move_to_department_spinner_text_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/move_to_department_spinner_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/move_to_department" />
        </TableRow>

        <TableRow
            android:id="@+id/move_to_department_spinner_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/move_to_department_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/move_course_to_department_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="112dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/move_course" />
        </TableRow>

        <TableRow
            android:id="@+id/move_course_button_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="40dp"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/move_course_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="112dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/move_course" />

        </TableRow>

    </TableLayout>


</RelativeLayout>
